--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         </div>
         <!-- End Subscribe -->
         <!-- Start Contact -->
-        <div class="contact">
+        <div class="contact" id="contact">
             <div class="container">
                 <div class="main-heading">
                     <h2>Contact Us</h2>
